--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
-  "name": "adapt-contrib-media",
-  "version": "2.0.7",
+  "name": "adapt-media-brightcove",
+  "version": "1.0.0",
   "framework": "^2.0.13",
-  "homepage": "https://github.com/adaptlearning/adapt-contrib-media",
-  "issues": "https://github.com/adaptlearning/adapt_framework/issues/new?title=contrib-media%3A%20please%20enter%20a%20brief%20summary%20of%20the%20issue%20here&body=please%20provide%20a%20full%20description%20of%20the%20problem,%20including%20steps%20on%20how%20to%20replicate,%20what%20browser(s)/device(s)%20the%20problem%20occurs%20on%20and,%20where%20helpful,%20screenshots.",
-  "displayName": "Media",
-  "component": "media",
+  "homepage": "https://github.com/fraylopez/adapt-media-brightcove",
+  "issues": "https://github.com/fraylopez/adapt-media-brightcove/issues",
+  "displayName": "Media Brightcove",
+  "component": "media-brightcove",
   "assetFields" : [
     "_media.ogv",
     "_media.mp4",
