--- a/bower.json
+++ b/bower.json
@@ -1,21 +1,22 @@
 {
-  "name": "adapt-media-brightcove",
-  "version": "1.0.0",
-  "framework": "^2.0.13",
-  "homepage": "https://github.com/fraylopez/adapt-media-brightcove",
-  "issues": "https://github.com/fraylopez/adapt-media-brightcove/issues",
-  "displayName": "Media Brightcove",
-  "component": "media-brightcove",
-  "assetFields" : [
-    "_media.ogv",
-    "_media.mp4",
-    "_media.poster"
-  ],
-  "description": "Playback of video and audio with a Flash Player fallback for IE8+ (Extended with Brightcove source)",
-  "main": "/js/adapt-contrib-media.js",
-  "keywords": [
-    "adapt-plugin",
-    "adapt-component"
-  ],
-  "license": "GPLv3"
+    "name": "adapt-media-brightcove",
+    "repository": "https://github.com/fraylopez/adapt-media-brightcove",
+    "framework": "^2.0.13",
+    "version": "1.0.0",
+    "homepage": "https://github.com/fraylopez/adapt-media-brightcove",
+    "issues": "https://github.com/fraylopez/adapt-media-brightcove/issues",
+    "displayName": "Media Brightcove",
+    "component": "media-brightcove",
+    "assetFields": [
+        "_media.ogv",
+        "_media.mp4",
+        "_media.poster"
+    ],
+    "description": "Playback of video and audio with a Flash Player fallback for IE8+ (Extended with Brightcove source)",
+    "main": "/js/adapt-contrib-media.js",
+    "keywords": [
+        "adapt-plugin",
+        "adapt-component"
+    ],
+    "license": "GPLv3"
 }
