--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
         "_media.poster"
     ],
     "description": "adapt-contrib-media extended with Brightcove source",
-    "main": "/js/adapt-contrib-media.js",
+    "main": "/js/adapt-media-brightcove.js",
     "keywords": [
         "adapt-plugin",
         "adapt-component"
